--- a/LeilãodeEntregas/LeilãodeEntregas.csproj
+++ b/LeilãodeEntregas/LeilãodeEntregas.csproj
@@ -49,6 +49,7 @@
     <Compile Include="BFS.cs" />
     <Compile Include="Caminho.cs" />
     <Compile Include="Entregas.cs" />
+    <Compile Include="EntregasPossiveis.cs" />
     <Compile Include="Form1.cs">
       <SubType>Form</SubType>
     </Compile>
