--- a/LeilãodeEntregas/LeilãodeEntregas.csproj
+++ b/LeilãodeEntregas/LeilãodeEntregas.csproj
@@ -50,6 +50,7 @@
     <Compile Include="Caminho.cs" />
     <Compile Include="Entregas.cs" />
     <Compile Include="EntregasPossiveis.cs" />
+    <Compile Include="EntregasWIP.cs" />
     <Compile Include="Form1.cs">
       <SubType>Form</SubType>
     </Compile>
