--- a/LeilãodeEntregas/LeilãodeEntregas.csproj
+++ b/LeilãodeEntregas/LeilãodeEntregas.csproj
@@ -60,6 +60,7 @@
     </Compile>
     <Compile Include="GrafoMatriz.cs" />
     <Compile Include="Graph.cs" />
+    <Compile Include="HeaderMatriz.cs" />
     <Compile Include="Mapa.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
