--- a/LeilãodeEntregas/LeilãodeEntregas.csproj
+++ b/LeilãodeEntregas/LeilãodeEntregas.csproj
@@ -49,6 +49,12 @@
     <Compile Include="AStarMatrix.cs" />
     <Compile Include="BFS.cs" />
     <Compile Include="Caminho.cs" />
+    <Compile Include="Comparativo.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Comparativo.Designer.cs">
+      <DependentUpon>Comparativo.cs</DependentUpon>
+    </Compile>
     <Compile Include="Dijkstra.cs" />
     <Compile Include="Entregas.cs" />
     <Compile Include="EntregasDikstra.cs" />
@@ -67,6 +73,9 @@
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Vertex.cs" />
+    <EmbeddedResource Include="Comparativo.resx">
+      <DependentUpon>Comparativo.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="Form1.resx">
       <DependentUpon>Form1.cs</DependentUpon>
     </EmbeddedResource>
@@ -110,6 +119,12 @@
   </ItemGroup>
   <ItemGroup>
     <None Include="Resources\path_32.ico" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\Astar.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\Dijkstra.png" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
